--- a/display/package.json
+++ b/display/package.json
@@ -14,5 +14,8 @@
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify-es": "^3.3.0",
     "grunt-contrib-watch": "^1.1.0"
+  },
+  "dependencies": {
+    "jquery": "^3.4.1"
   }
 }
