SIMON TO THE RESCUE

--- a/display/package.json
+++ b/display/package.json
@@ -15,7 +15,5 @@
     "grunt-contrib-uglify-es": "^3.3.0",
     "grunt-contrib-watch": "^1.1.0"
   },
-  "dependencies": {
-    "jquery": "^3.4.1"
-  }
+  "dependencies": {}
 }
